GNOME Bugzilla – Bug 765252
fix warning due implicit declaration of function
Last modified: 2016-04-20 07:25:39 UTC
... CC backends/meta-monitor-config.lo backends/meta-cursor-renderer.c: In function ‘meta_cursor_renderer_calculate_rect’: backends/meta-cursor-renderer.c:112:15: error: implicit declaration of function ‘roundf’ [-Werror=implicit-function-declaration] .x = (int)roundf (priv->current_x - (hot_x * texture_scale)), ^ backends/meta-cursor-renderer.c:112:15: error: incompatible implicit declaration of built-in function ‘roundf’ [-Werror] backends/meta-cursor-renderer.c:112:15: note: include ‘<math.h>’ or provide a declaration of ‘roundf’ cc1: all warnings being treated as errors
Created attachment 326314 [details] [review] include math.h
Review of attachment 326314 [details] [review]: Sure
I forgot to use git-bz to push it. Pushed as ff312b69585cb0ec9f53483baa47678db8d44306 https://git.gnome.org/browse/mutter/commit/?id=ff312b69585cb