src/backends/meta-cursor-renderer.c
@@ -28,6 +28,7 @@
 
 #include <meta/meta-backend.h>
 #include <meta/util.h>
+#include <math.h>
 
 #include <cogl/cogl.h>
 #include <clutter/clutter.h>
